Модальне вікно design
Створення html розмітки і перенесення класів css

--- a/src/index.html
+++ b/src/index.html
@@ -645,6 +645,25 @@
 				</section>
 			</div>
 		</div>
+		<div class="popup-design">
+			<div class="popup-design__body">
+				<h4 class="popup-design__title">Замовити дизайн портрета</h4>
+				<div class="popup-design__upload">
+					<input type="file" class="upload" hidden="hidden">
+					<button class="upload-btn"><img src="images/svg/camera.png" class="svg" alt="svg">
+						Завантажте
+						фотографію</button>
+					<span class="upload-span">Файл не вибрано</span>
+				</div>
+				<input type="text" name="name" placeholder="Ваше ім'я" class="popup-design__input">
+				<input type="text" name="phone" placeholder="Ваш телефон" class="popup-design__input">
+				<input type="text" name="email" placeholder="Ваш E-mail" class="popup-design__input">
+				<input type="text" name="question" placeholder="Залиште ваше запитання тут" class="popup-design__input">
+				<div class="popup-design__button">
+					<button class="button-order">Відправити дизайнеру</button>
+				</div>
+			</div>
+		</div>
 	</main>
 
 	<footer>
