Зміни в секціях custumers i advantages
Обом секціям додав спільний клас .container-big
Попрацював з адаптивом картинок в секції customers

--- a/src/index.html
+++ b/src/index.html
@@ -328,36 +328,38 @@
 				</div>
 			</div>
 		</section>
-		<section class="advantages">
-			<h2 class="advantages__title title">Наші переваги</h2>
-			<h3 class="advantages__subtitle subtitle">Чому вибирають саме нас?</h3>
-			<div class="advantages__items">
-				<div class="advantages__item">
-					<img src="images/features-1.png" class="advantages__image-1" alt="Наші сильні сторони">
-					<p>Натуральне полотно і найкращі фарби</p>
+		<div class="container-big">
+			<section class="advantages">
+				<h2 class="advantages__title title">Наші переваги</h2>
+				<h3 class="advantages__subtitle subtitle">Чому вибирають саме нас?</h3>
+				<div class="advantages__items">
+					<div class="advantages__item">
+						<img src="images/features-1.png" class="advantages__image-1" alt="Наші сильні сторони">
+						<p>Натуральне полотно і найкращі фарби</p>
+					</div>
+					<div class="advantages__item">
+						<img src="images/features-2.png" class="advantages__image-2" alt="Наші сильні сторони">
+						<p>Гарантія мінімальної ціни</p>
+					</div>
+					<div class="advantages__item">
+						<img src="images/features-3.png" class="advantages__image-3" alt="Наші сильні сторони">
+						<p>Великий вибір декоративних рамок</p>
+					</div>
+					<div class="advantages__item">
+						<img src="images/features-4.png" class="advantages__image-4" alt="Наші сильні сторони">
+						<p>Малюють професійні художники</p>
+					</div>
+					<div class="advantages__item">
+						<img src="images/features-5.png" class="advantages__image-5" alt="Наші сильні сторони">
+						<p>Захист від старіння до 70 років</p>
+					</div>
+					<div class="advantages__item">
+						<img src="images/features-6.png" class="advantages__image-6" alt="Наші сильні сторони">
+						<p>Доставка в будь-яку точку країни</p>
+					</div>
 				</div>
-				<div class="advantages__item">
-					<img src="images/features-2.png" class="advantages__image-2" alt="Наші сильні сторони">
-					<p>Гарантія мінімальної ціни</p>
-				</div>
-				<div class="advantages__item">
-					<img src="images/features-3.png" class="advantages__image-3" alt="Наші сильні сторони">
-					<p>Великий вибір декоративних рамок</p>
-				</div>
-				<div class="advantages__item">
-					<img src="images/features-4.png" class="advantages__image-4" alt="Наші сильні сторони">
-					<p>Малюють професійні художники</p>
-				</div>
-				<div class="advantages__item">
-					<img src="images/features-5.png" class="advantages__image-5" alt="Наші сильні сторони">
-					<p>Захист від старіння до 70 років</p>
-				</div>
-				<div class="advantages__item">
-					<img src="images/features-6.png" class="advantages__image-6" alt="Наші сильні сторони">
-					<p>Доставка в будь-яку точку країни</p>
-				</div>
-			</div>
-		</section>
+			</section>
+		</div>
 		<section class="sizes">
 			<h2 class="sizes__title title">Популярні розміри і ціни</h2>
 			<h3 class="sizes__subtitle subtitle">Можемо виготовити картину будь-якого розміру!</h3>
@@ -476,76 +478,78 @@
 		</div>
 		<section class="customers" id="customers">
 			<div class="background">
-				<div class="customers__slider">
-					<div class="customers__item">
-						<div class="customers__image">
-							<img src="images/feedback-1.png" alt="Задоволений покупець">
-							<div class="customers__button">
-								<button class="button-order">
-									Хочу так само
-								</button>
+				<div class="container-big">
+					<div class="customers__slider">
+						<div class="customers__item">
+							<div class="customers__image">
+								<img src="images/feedback-1.png" alt="Задоволений покупець">
+								<div class="customers__button">
+									<button class="button-order">
+										Хочу так само
+									</button>
+								</div>
 							</div>
-						</div>
-						<div class="customers__body">
-							<p class="customers__feedback">«...Отримав я саме те, про що мріяв, причому прямо з
-								доставкою
-								додому!...»</p>
-							<p class="customers__text">Я живу в небольшом поселке и для меня заказать портрет было
-								целым
-								подвигом! Пристал наши с супругой фото и попросил сделать несколько макетов на
-								выбор. К моему
-								удивлению, очень скоро мне прислали не просто несколько, а целых 15 разных макетов!
-								Я выбрал
-								самый лучший и оформил заказ.</p>
-							<p class="customers__name"><span>Олег Петров</span> м. Київ</p>
+							<div class="customers__body">
+								<p class="customers__feedback">«...Отримав я саме те, про що мріяв, причому прямо з
+									доставкою
+									додому!...»</p>
+								<p class="customers__text">Я живу в небольшом поселке и для меня заказать портрет было
+									целым
+									подвигом! Пристал наши с супругой фото и попросил сделать несколько макетов на
+									выбор. К моему
+									удивлению, очень скоро мне прислали не просто несколько, а целых 15 разных макетов!
+									Я выбрал
+									самый лучший и оформил заказ.</p>
+								<p class="customers__name"><span>Олег Петров</span> м. Київ</p>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="customers__slider">
-					<div class="customers__item" style="display: flex;">
-						<div class="customers__image">
-							<img src="images/feedback-2.jpg" alt="Задоволений покупець">
-							<div class="customers__button">
-								<button class="button-order">
-									Хочу так само
-								</button>
+					<div class="customers__slider">
+						<div class="customers__item" style="display: flex;">
+							<div class="customers__image">
+								<img src="images/feedback-2.jpg" alt="Задоволений покупець">
+								<div class="customers__button">
+									<button class="button-order">
+										Хочу так само
+									</button>
+								</div>
 							</div>
-						</div>
-						<div class="customers__body">
-							<p class="customers__feedback">"...Я в захопленні! Не думала, що портрет може бути
-								настільки
-								красивим!"</p>
-							<p class="customers__text">Подруге муж подарил портрет, и мне тоже захотелось заказать.
-								Из всех
-								макетов этот сразу запал в душу! И отлично вписывется в интерьер моей гостинной.
-								Теперь он висит
-								тут на почетном месте, и я каждый раз любую им. Всем моим родным тоже очень
-								понравился!</p>
-							<p class="customers__name"><span>Ірина Антонова</span> м. Дніпро</p>
+							<div class="customers__body">
+								<p class="customers__feedback">"...Я в захопленні! Не думала, що портрет може бути
+									настільки
+									красивим!"</p>
+								<p class="customers__text">Подруге муж подарил портрет, и мне тоже захотелось заказать.
+									Из всех
+									макетов этот сразу запал в душу! И отлично вписывется в интерьер моей гостинной.
+									Теперь он висит
+									тут на почетном месте, и я каждый раз любую им. Всем моим родным тоже очень
+									понравился!</p>
+								<p class="customers__name"><span>Ірина Антонова</span> м. Дніпро</p>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="customers__slider">
-					<div class="customers__item" style="display: flex;">
-						<div class="customers__image">
-							<img src="images/feedback-3.jpg" alt="Задоволений покупець">
-							<div class="customers__button">
-								<button class="button-order">
-									Хочу так само
-								</button>
+					<div class="customers__slider">
+						<div class="customers__item" style="display: flex;">
+							<div class="customers__image">
+								<img src="images/feedback-3.jpg" alt="Задоволений покупець">
+								<div class="customers__button">
+									<button class="button-order">
+										Хочу так само
+									</button>
+								</div>
 							</div>
-						</div>
-						<div class="customers__body">
-							<p class="customers__feedback">«...Несподіваний подарунок на день народження від
-								друзів...»</p>
-							<p class="customers__text">Хочу поделиться впечатлениями от полученного вчера подарка.
-								Классная
-								работа, выполненная, натуральными красками! Я как человек педантичный, люблю мелочи,
-								для меня
-								они очень важны, и здесь они прикольно сделаны – часы нарисовали, свитерок мой
-								любимый, маечка с
-								резиночкой. Очень позитивный шарж, сделанный по моей фотографии.</p>
-							<p class="customers__name"><span>Нурлан Сабуров</span> м. Ужгород</p>
+							<div class="customers__body">
+								<p class="customers__feedback">«...Несподіваний подарунок на день народження від
+									друзів...»</p>
+								<p class="customers__text">Хочу поделиться впечатлениями от полученного вчера подарка.
+									Классная
+									работа, выполненная, натуральными красками! Я как человек педантичный, люблю мелочи,
+									для меня
+									они очень важны, и здесь они прикольно сделаны – часы нарисовали, свитерок мой
+									любимый, маечка с
+									резиночкой. Очень позитивный шарж, сделанный по моей фотографии.</p>
+								<p class="customers__name"><span>Нурлан Сабуров</span> м. Ужгород</p>
+							</div>
 						</div>
 					</div>
 				</div>
