Переробив всі svg зображення

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
 					</ul>
 				</div>
 				<div class="header-menu__button">
-					<button>Замовити</button>
+					<button>Замовити <img src="images/svg/next.png" class="svg" alt="svg"></button>
 				</div>
 			</section>
 		</div>
@@ -78,7 +78,7 @@
 					</div>
 					<div class="head__phones">
 						<div class="head__mobile">
-							<img src="images/svg/24-hours-service.png" class="svg" alt="Цілодобово">
+							<img src="images/svg/24-hours.png" class="svg" alt="Цілодобово">
 							<a href="tel:+380981312888">+38 (098) 13-12-888</a>
 						</div>
 						<div class="head__social">
@@ -102,19 +102,19 @@
 						<div class="welcome__tittle">Портрет на полотні</div>
 						<div class="welcome__advantages">
 							<div class="welcome__item">
-								<img src="images/svg/check.png" class="svg" alt="svg">
+								<img src="images/svg/check-mark.png" class="svg" alt="svg">
 								<p>Гарантія мінімальної ціни</p>
 							</div>
 							<div class="welcome__item">
-								<img src="images/svg/check.png" class="svg" alt="svg">
+								<img src="images/svg/check-mark.png" class="svg" alt="svg">
 								<p>На 30% дешевше конкурентів</p>
 							</div>
 							<div class="welcome__item">
-								<img src="images/svg/check.png" class="svg" alt="svg">
+								<img src="images/svg/check-mark.png" class="svg" alt="svg">
 								<p>При замовленні з сайта до 30% знижки</p>
 							</div>
 							<div class="welcome__item">
-								<img src="images/svg/check.png" class="svg" alt="svg">
+								<img src="images/svg/check-mark.png" class="svg" alt="svg">
 								<p>Термінове виготовлення за 3 години</p>
 							</div>
 						</div>
@@ -484,9 +484,9 @@
 							<div class="customers__image">
 								<img src="images/feedback-1.png" alt="Задоволений покупець">
 								<div class="customers__button">
-									<button class="button-order">
-										Хочу так само
-									</button>
+									<button class="button-order"><span><img src="images/svg/heart.png" class="svg"
+												alt="svg"></span> Хочу так
+										само</button>
 								</div>
 							</div>
 							<div class="customers__body">
@@ -509,9 +509,9 @@
 							<div class="customers__image">
 								<img src="images/feedback-2.jpg" alt="Задоволений покупець">
 								<div class="customers__button">
-									<button class="button-order">
-										Хочу так само
-									</button>
+									<button class="button-order"><span><img src="images/svg/heart.png" class="svg"
+												alt="svg"></span>Хочу так
+										само</button>
 								</div>
 							</div>
 							<div class="customers__body">
@@ -533,7 +533,8 @@
 							<div class="customers__image">
 								<img src="images/feedback-3.jpg" alt="Задоволений покупець">
 								<div class="customers__button">
-									<button class="button-order">
+									<button class="button-order"><span><img src="images/svg/heart.png" class="svg"
+												alt="svg"></span>
 										Хочу так само
 									</button>
 								</div>
@@ -668,7 +669,7 @@
 				<div class="popup-design__button popup__button">
 					<button class="button-order">Відправити дизайнеру</button>
 				</div>
-				<img src="images/svg/delete.png" alt="svg" class="svg close popup__close">
+				<img src="images/svg/x.png" alt="svg" class="svg-big close popup__close">
 			</div>
 		</div>
 		<div class="popup-consultation popup">
@@ -682,7 +683,7 @@
 				<div class="popup-consultation__button popup__button">
 					<button class="button-order">Відправити дизайнеру</button>
 				</div>
-				<img src="images/svg/delete.png" alt="svg" class="svg close popup__close">
+				<img src="images/svg/x.png" alt="svg" class="svg-big close popup__close">
 			</div>
 		</div>
 	</main>
