Добавив тінь на зображеннях
добавив спеціальний клас
.circle-shadow

--- a/src/index.html
+++ b/src/index.html
@@ -423,27 +423,27 @@
 				<h3 class="process__subtitle subtitle">Процес виготовлення картини</h3>
 				<div class="process__items">
 					<div class="process__item">
-						<img src="images/scheme-1.png" class="process__image-1" alt="1 етап">
+						<img src="images/scheme-1.png" class="process__image-1 circle-shadow" alt="1 етап">
 						<p>Надсилайте фотографію та свої побажання</p>
 					</div>
 					<div class="process__item">
-						<img src="images/scheme-2.png" class="process__image-2" alt="2 етап">
+						<img src="images/scheme-2.png" class="process__image-2 circle-shadow" alt="2 етап">
 						<p>Ми готуємо варіанти дизайну з урахуванням ваших вимог</p>
 					</div>
 					<div class="process__item">
-						<img src="images/scheme-3.png" class="process__image-3" alt="3 етап">
+						<img src="images/scheme-3.png" class="process__image-3 circle-shadow" alt="3 етап">
 						<p>Ви затверджуєте макет і художник приступає до роботи</p>
 					</div>
 					<div class="process__item">
-						<img src="images/scheme-4.png" class="process__image-4" alt="4 етап">
+						<img src="images/scheme-4.png" class="process__image-4 circle-shadow" alt="4 етап">
 						<p>Вибираєте варіант багетної рами та оформлення</p>
 					</div>
 					<div class="process__item">
-						<img src="images/scheme-5.png" class="process__image-5" alt="5 етап">
+						<img src="images/scheme-5.png" class="process__image-5 circle-shadow" alt="5 етап">
 						<p>Узгоджуються адреса та зручний час доставки</p>
 					</div>
 					<div class="process__item">
-						<img src="images/scheme-6.png" class="process__image-6" alt="6 етап">
+						<img src="images/scheme-6.png" class="process__image-6 circle-shadow" alt="6 етап">
 						<p>Ви платите суму, що залишилася кур'єру при отриманні картини</p>
 					</div>
 				</div>
@@ -482,7 +482,7 @@
 					<div class="customers__slider">
 						<div class="customers__item">
 							<div class="customers__image">
-								<img src="images/feedback-1.png" alt="Задоволений покупець">
+								<img src="images/feedback-1.png" alt="Задоволений покупець" class="photo">
 								<div class="customers__button">
 									<button class="button-order"><span><img src="images/svg/heart.png" class="svg"
 												alt="svg"></span> Хочу так
@@ -507,7 +507,7 @@
 					<div class="customers__slider">
 						<div class="customers__item" style="display: flex;">
 							<div class="customers__image">
-								<img src="images/feedback-2.jpg" alt="Задоволений покупець">
+								<img src="images/feedback-2.jpg" alt="Задоволений покупець" class="photo">
 								<div class="customers__button">
 									<button class="button-order"><span><img src="images/svg/heart.png" class="svg"
 												alt="svg"></span>Хочу так
@@ -531,7 +531,7 @@
 					<div class="customers__slider">
 						<div class="customers__item" style="display: flex;">
 							<div class="customers__image">
-								<img src="images/feedback-3.jpg" alt="Задоволений покупець">
+								<img src="images/feedback-3.jpg" alt="Задоволений покупець" class="photo">
 								<div class="customers__button">
 									<button class="button-order"><span><img src="images/svg/heart.png" class="svg"
 												alt="svg"></span>
@@ -620,7 +620,7 @@
 			<div class="container">
 				<section class="design">
 					<div class="design__image">
-						<img src="images/promo-3.png" alt="Портрет в стилі поп-арт">
+						<img src="images/promo-3.png" alt="Портрет в стилі поп-арт" class="circle-shadow">
 					</div>
 					<div class="design__body">
 						<h2 class="design__title title">Просто відправте фото і</h2>
