наверстав бургер-меню

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,25 @@
 				<div class="header-menu__catalog">
 					<p>Каталог товарів</p>
 				</div>
+				<!--     		BURGER MENU     -->
+				<div class="header-menu__burger">
+					<img src="images/svg/menu.png" class="svg__big" alt="menu">
+				</div>
+				<div class="header-menu__list burger-list">
+					<div class="burger-list__item">
+						<a href="#styles">Картина з вашого фото</a>
+					</div>
+					<div class="burger-list__item">
+						<a href="#portfolio">Готові картини</a>
+					</div>
+					<div class="burger-list__item">
+						<a href="#customers">Ідеї для подарунку</a>
+					</div>
+					<div class="burger-list__item">
+						<a href="#FAQ">FAQ</a>
+					</div>
+				</div>
+				<!--     		BURGER MENU     -->
 				<div class="header-menu__item">
 					Картина з вашого фото
 					<span class="header-menu__arrow"> </span>
