--- a/src/index.html
+++ b/src/index.html
@@ -20,71 +20,69 @@
 	<!--     <include src="./partials/example.html"></include>     -->
 
 	<header class="header">
-		<div class="container">
-			<section class="header-menu">
-				<div class="header-menu__catalog">
-					<p>Каталог товарів</p>
+		<section class="header-menu">
+			<div class="header-menu__catalog">
+				<p>PALEN</p>
+			</div>
+			<!--     		BURGER MENU     -->
+			<div class="header-menu__burger">
+				<img src="images/svg/menu.png" class="svg__big" alt="menu">
+			</div>
+			<div class="header-menu__list burger-list">
+				<div class="burger-list__item">
+					<a href="#styles">Картина з вашого фото</a>
 				</div>
-				<!--     		BURGER MENU     -->
-				<div class="header-menu__burger">
-					<img src="images/svg/menu.png" class="svg__big" alt="menu">
+				<div class="burger-list__item">
+					<a href="#portfolio">Готові картини</a>
 				</div>
-				<div class="header-menu__list burger-list">
-					<div class="burger-list__item">
-						<a href="#styles">Картина з вашого фото</a>
-					</div>
-					<div class="burger-list__item">
-						<a href="#portfolio">Готові картини</a>
-					</div>
-					<div class="burger-list__item">
-						<a href="#customers">Ідеї для подарунку</a>
-					</div>
-					<div class="burger-list__item">
-						<a href="#FAQ">FAQ</a>
-					</div>
+				<div class="burger-list__item">
+					<a href="#customers">Ідеї для подарунку</a>
 				</div>
-				<!--     		BURGER MENU     -->
-				<div class="header-menu__item">
-					Картина з вашого фото
-					<span class="header-menu__arrow"> </span>
-					<ul class="header-menu__sub-list">
-						<li><a class="header-menu__link" href="#styles">Портрет маслом</a></li>
-						<li><a class="header-menu__link" href="#styles">Портрет пастелюю</a></li>
-						<li><a class="header-menu__link" href="#styles">Портрет аквареллю</a></li>
-					</ul>
+				<div class="burger-list__item">
+					<a href="#FAQ">FAQ</a>
 				</div>
-				<div class="header-menu__item">
-					Готові картини
-					<span class="header-menu__arrow"> </span>
-					<ul class="header-menu__sub-list">
-						<li><a class="header-menu__link" href="#portfolio">Для дівчини</a></li>
-						<li><a class="header-menu__link" href="#portfolio">Для хлопця</a></li>
-						<li><a class="header-menu__link" href="#portfolio">Інше...</a></li>
-					</ul>
-				</div>
-				<div class="header-menu__item">
-					Ідеї для подарунку
-					<span class="header-menu__arrow"> </span>
-					<ul class="header-menu__sub-list">
-						<li><a class="header-menu__link" href="#customers">Готові картини</a></li>
-						<li><a class="header-menu__link" href="#customers">Відгуки клієнтів</a></li>
-					</ul>
-				</div>
-				<div class="header-menu__item">
-					FAQ
-					<span class="header-menu__arrow"> </span>
-					<ul class="header-menu__sub-list">
-						<li><a class="header-menu__link" href="#FAQ">Термінове виготовлення</a></li>
-						<li><a class="header-menu__link" href="#FAQ">Доставка і оплата</a></li>
-						<li><a class="header-menu__link" href="#FAQ">Схема роботи</a></li>
-						<li><a class="header-menu__link" href="#FAQ">Контакти</a></li>
-					</ul>
-				</div>
-				<div class="header-menu__button">
-					<button>Замовити <img src="images/svg/next.png" class="svg" alt="svg"></button>
-				</div>
-			</section>
-		</div>
+			</div>
+			<!--     		BURGER MENU     -->
+			<div class="header-menu__item">
+				Картина з вашого фото
+				<span class="header-menu__arrow"> </span>
+				<ul class="header-menu__sub-list">
+					<li><a class="header-menu__link" href="#styles">Портрет маслом</a></li>
+					<li><a class="header-menu__link" href="#styles">Портрет пастелюю</a></li>
+					<li><a class="header-menu__link" href="#styles">Портрет аквареллю</a></li>
+				</ul>
+			</div>
+			<div class="header-menu__item">
+				Готові картини
+				<span class="header-menu__arrow"> </span>
+				<ul class="header-menu__sub-list">
+					<li><a class="header-menu__link" href="#portfolio">Для дівчини</a></li>
+					<li><a class="header-menu__link" href="#portfolio">Для хлопця</a></li>
+					<li><a class="header-menu__link" href="#portfolio">Інше...</a></li>
+				</ul>
+			</div>
+			<div class="header-menu__item">
+				Ідеї для подарунку
+				<span class="header-menu__arrow"> </span>
+				<ul class="header-menu__sub-list">
+					<li><a class="header-menu__link" href="#customers">Готові картини</a></li>
+					<li><a class="header-menu__link" href="#customers">Відгуки клієнтів</a></li>
+				</ul>
+			</div>
+			<div class="header-menu__item">
+				FAQ
+				<span class="header-menu__arrow"> </span>
+				<ul class="header-menu__sub-list">
+					<li><a class="header-menu__link" href="#FAQ">Термінове виготовлення</a></li>
+					<li><a class="header-menu__link" href="#FAQ">Доставка і оплата</a></li>
+					<li><a class="header-menu__link" href="#FAQ">Схема роботи</a></li>
+					<li><a class="header-menu__link" href="#FAQ">Контакти</a></li>
+				</ul>
+			</div>
+			<div class="header-menu__button">
+				<button>Замовити <img src="images/svg/next.png" class="svg" alt="svg"></button>
+			</div>
+		</section>
 	</header>
 
 	<main class="main">
@@ -109,10 +107,10 @@
 				</section>
 				<section class="welcome">
 					<div class="welcome__sliders">
-						<div class="welcome__slider welcome__slider-1" style="display: none;">
+						<div class="welcome__slider welcome__slider-1">
 							<img src="images/main-slider-1.png" alt="Задоволений покупець з картиною в руках">
 						</div>
-						<div class="welcome__slider welcome__slider-2">
+						<div class="welcome__slider welcome__slider-2" style="display: none;">
 							<img src="images/main-slider-2.png" alt="Задоволений покупець з картиною в руках">
 						</div>
 					</div>
