--- a/src/index.html
+++ b/src/index.html
@@ -20,69 +20,71 @@
 	<!--     <include src="./partials/example.html"></include>     -->
 
 	<header class="header">
-		<section class="header-menu">
-			<div class="header-menu__catalog">
-				<p>PALEN</p>
-			</div>
-			<!--     		BURGER MENU     -->
-			<div class="header-menu__burger">
-				<img src="images/svg/menu.png" class="svg__big" alt="menu">
-			</div>
-			<div class="header-menu__list burger-list">
-				<div class="burger-list__item">
-					<a href="#styles">Картина з вашого фото</a>
+		<div class="container-big">
+			<section class="header-menu">
+				<div class="header-menu__catalog">
+					<p>PALEN</p>
 				</div>
-				<div class="burger-list__item">
-					<a href="#portfolio">Готові картини</a>
+				<!--     		BURGER MENU     -->
+				<div class="header-menu__burger">
+					<img src="images/svg/menu.png" class="svg__big" alt="menu">
 				</div>
-				<div class="burger-list__item">
-					<a href="#customers">Ідеї для подарунку</a>
+				<div class="header-menu__list burger-list">
+					<div class="burger-list__item">
+						<a href="#styles">Картина з вашого фото</a>
+					</div>
+					<div class="burger-list__item">
+						<a href="#portfolio">Готові картини</a>
+					</div>
+					<div class="burger-list__item">
+						<a href="#customers">Ідеї для подарунку</a>
+					</div>
+					<div class="burger-list__item">
+						<a href="#FAQ">FAQ</a>
+					</div>
 				</div>
-				<div class="burger-list__item">
-					<a href="#FAQ">FAQ</a>
+				<!--     		BURGER MENU     -->
+				<div class="header-menu__item">
+					Картина з вашого фото
+					<span class="header-menu__arrow"> </span>
+					<ul class="header-menu__sub-list">
+						<li><a class="header-menu__link" href="#styles">Портрет маслом</a></li>
+						<li><a class="header-menu__link" href="#styles">Портрет пастелюю</a></li>
+						<li><a class="header-menu__link" href="#styles">Портрет аквареллю</a></li>
+					</ul>
 				</div>
-			</div>
-			<!--     		BURGER MENU     -->
-			<div class="header-menu__item">
-				Картина з вашого фото
-				<span class="header-menu__arrow"> </span>
-				<ul class="header-menu__sub-list">
-					<li><a class="header-menu__link" href="#styles">Портрет маслом</a></li>
-					<li><a class="header-menu__link" href="#styles">Портрет пастелюю</a></li>
-					<li><a class="header-menu__link" href="#styles">Портрет аквареллю</a></li>
-				</ul>
-			</div>
-			<div class="header-menu__item">
-				Готові картини
-				<span class="header-menu__arrow"> </span>
-				<ul class="header-menu__sub-list">
-					<li><a class="header-menu__link" href="#portfolio">Для дівчини</a></li>
-					<li><a class="header-menu__link" href="#portfolio">Для хлопця</a></li>
-					<li><a class="header-menu__link" href="#portfolio">Інше...</a></li>
-				</ul>
-			</div>
-			<div class="header-menu__item">
-				Ідеї для подарунку
-				<span class="header-menu__arrow"> </span>
-				<ul class="header-menu__sub-list">
-					<li><a class="header-menu__link" href="#customers">Готові картини</a></li>
-					<li><a class="header-menu__link" href="#customers">Відгуки клієнтів</a></li>
-				</ul>
-			</div>
-			<div class="header-menu__item">
-				FAQ
-				<span class="header-menu__arrow"> </span>
-				<ul class="header-menu__sub-list">
-					<li><a class="header-menu__link" href="#FAQ">Термінове виготовлення</a></li>
-					<li><a class="header-menu__link" href="#FAQ">Доставка і оплата</a></li>
-					<li><a class="header-menu__link" href="#FAQ">Схема роботи</a></li>
-					<li><a class="header-menu__link" href="#FAQ">Контакти</a></li>
-				</ul>
-			</div>
-			<div class="header-menu__button">
-				<button>Замовити <img src="images/svg/next.png" class="svg" alt="svg"></button>
-			</div>
-		</section>
+				<div class="header-menu__item">
+					Готові картини
+					<span class="header-menu__arrow"> </span>
+					<ul class="header-menu__sub-list">
+						<li><a class="header-menu__link" href="#portfolio">Для дівчини</a></li>
+						<li><a class="header-menu__link" href="#portfolio">Для хлопця</a></li>
+						<li><a class="header-menu__link" href="#portfolio">Інше...</a></li>
+					</ul>
+				</div>
+				<div class="header-menu__item">
+					Ідеї для подарунку
+					<span class="header-menu__arrow"> </span>
+					<ul class="header-menu__sub-list">
+						<li><a class="header-menu__link" href="#customers">Готові картини</a></li>
+						<li><a class="header-menu__link" href="#customers">Відгуки клієнтів</a></li>
+					</ul>
+				</div>
+				<div class="header-menu__item">
+					FAQ
+					<span class="header-menu__arrow"> </span>
+					<ul class="header-menu__sub-list">
+						<li><a class="header-menu__link" href="#FAQ">Термінове виготовлення</a></li>
+						<li><a class="header-menu__link" href="#FAQ">Доставка і оплата</a></li>
+						<li><a class="header-menu__link" href="#FAQ">Схема роботи</a></li>
+						<li><a class="header-menu__link" href="#FAQ">Контакти</a></li>
+					</ul>
+				</div>
+				<div class="header-menu__button">
+					<button>Замовити <img src="images/svg/next.png" class="svg" alt="svg"></button>
+				</div>
+			</section>
+		</div>
 	</header>
 
 	<main class="main">
