Адаптив для footer i header

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
 					</div>
 				</div>
 				<!--     		BURGER MENU     -->
-				<div class="header-menu__item">
+				<div class="header-menu__item header-menu__item-1">
 					Картина з вашого фото
 					<span class="header-menu__arrow"> </span>
 					<ul class="header-menu__sub-list">
@@ -53,7 +53,7 @@
 						<li><a class="header-menu__link" href="#styles">Портрет аквареллю</a></li>
 					</ul>
 				</div>
-				<div class="header-menu__item">
+				<div class="header-menu__item header-menu__item-2">
 					Готові картини
 					<span class="header-menu__arrow"> </span>
 					<ul class="header-menu__sub-list">
@@ -62,7 +62,7 @@
 						<li><a class="header-menu__link" href="#portfolio">Інше...</a></li>
 					</ul>
 				</div>
-				<div class="header-menu__item">
+				<div class="header-menu__item header-menu__item-3">
 					Ідеї для подарунку
 					<span class="header-menu__arrow"> </span>
 					<ul class="header-menu__sub-list">
@@ -70,7 +70,7 @@
 						<li><a class="header-menu__link" href="#customers">Відгуки клієнтів</a></li>
 					</ul>
 				</div>
-				<div class="header-menu__item">
+				<div class="header-menu__item header-menu__item-4">
 					FAQ
 					<span class="header-menu__arrow"> </span>
 					<ul class="header-menu__sub-list">
@@ -744,7 +744,7 @@
 			<div class="footer__contacts">
 				<a href="tel:+380981312888"><span class="contacts-big">+38 (098) 13-12-888</span></a>
 				<a href="tel:+380672312000"><span class="contacts-small">+38 (067) 23-12-000</span></a>
-				<span>Цілодобово, без вихідних</span>
+				<span class="footer__all-day">Цілодобово, без вихідних</span>
 				<a class="footer-mail" href="mailto:palen.arthouse@gmail.com">palen.arthouse@gmail.com</a>
 			</div>
 		</div>
