адаптив .head .sizes
Повнюстю готовий адаптив .head .sizes, плюс перероблений адаптив footer .header-menu

--- a/src/index.html
+++ b/src/index.html
@@ -405,7 +405,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="sizes__picture picture">
+				<div class="sizes__picture picture hit-sales">
 					<div class="picture__image">
 						<img src="images/sizes-3.png" alt="Чисте полотно">
 						<div class="picture__body">
