--- a/src/index.html
+++ b/src/index.html
@@ -289,34 +289,34 @@
 
 			<div class="portfolio__images">
 				<div class="portfolio__image">
-					<img src="images/portfolio-1.jpg" alt="Задоволений покупець з нашою картиною в руках">
+					<img src="images/portfolio-1.jpg" class="photo" alt="Задоволений покупець з нашою картиною в руках">
 				</div>
 				<div class="portfolio__image">
-					<img src="images/portfolio-2.jpg" alt="Задоволений покупець з нашою картиною в руках">
+					<img src="images/portfolio-2.jpg" class="photo" alt="Задоволений покупець з нашою картиною в руках">
 				</div>
 				<div class="portfolio__image">
-					<img src="images/portfolio-3.jpg" alt="Задоволений покупець з нашою картиною в руках">
+					<img src="images/portfolio-3.jpg" class="photo" alt="Задоволений покупець з нашою картиною в руках">
 				</div>
 				<div class="portfolio__image">
-					<img src="images/portfolio-4.jpg" alt="Задоволений покупець з нашою картиною в руках">
+					<img src="images/portfolio-4.jpg" class="photo" alt="Задоволений покупець з нашою картиною в руках">
 				</div>
 				<div class="portfolio__image">
-					<img src="images/portfolio-5.jpg" alt="Задоволений покупець з нашою картиною в руках">
+					<img src="images/portfolio-5.jpg" class="photo" alt="Задоволений покупець з нашою картиною в руках">
 				</div>
 				<div class="portfolio__image">
-					<img src="images/portfolio-6.jpg" alt="Задоволений покупець з нашою картиною в руках">
+					<img src="images/portfolio-6.jpg" class="photo" alt="Задоволений покупець з нашою картиною в руках">
 				</div>
 				<div class="portfolio__image">
-					<img src="images/portfolio-7.jpg" alt="Задоволений покупець з нашою картиною в руках">
+					<img src="images/portfolio-7.jpg" class="photo" alt="Задоволений покупець з нашою картиною в руках">
 				</div>
 				<div class="portfolio__image">
-					<img src="images/portfolio-8.jpg" alt="Задоволений покупець з нашою картиною в руках">
+					<img src="images/portfolio-8.jpg" class="photo" alt="Задоволений покупець з нашою картиною в руках">
 				</div>
 				<div class="portfolio__image">
-					<img src="images/portfolio-9.jpg" alt="Задоволений покупець з нашою картиною в руках">
+					<img src="images/portfolio-9.jpg" class="photo" alt="Задоволений покупець з нашою картиною в руках">
 				</div>
 				<div class="portfolio__image">
-					<img src="images/portfolio-10.jpg" alt="Задоволений покупець з нашою картиною в руках">
+					<img src="images/portfolio-10.jpg" class="photo" alt="Задоволений покупець з нашою картиною в руках">
 				</div>
 			</div>
 		</section>
