--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
 						<div class="welcome__slider welcome__slider-1">
 							<img src="images/main-slider-1.png" alt="Задоволений покупець з картиною в руках">
 						</div>
-						<div class="welcome__slider welcome__slider-2" style="display: none;">
+						<div class="welcome__slider welcome__slider-2">
 							<img src="images/main-slider-2.png" alt="Задоволений покупець з картиною в руках">
 						</div>
 					</div>
