адаптив .order-design

--- a/src/index.html
+++ b/src/index.html
@@ -155,9 +155,9 @@
 					<img src="images/order-design.jpg" class="photo" alt="Приклад зробленого портрету">
 				</div>
 				<div class="order-design__description">
-					<div class="order-design__title title">Просто відправте фото і</div>
-					<div class="order-design__subtitle subtitle">ми вишлемо вам дизайн безкоштовно на протязі 1 години!
-					</div>
+					<p class="order-design__title title">Просто відправте фото і</p>
+					<p class="order-design__subtitle subtitle">ми вишлемо вам дизайн безкоштовно на протязі 1 години!
+					</p>
 					<div class="order-design__button">
 						<button class="button-order">Замовити дизайн портрета</button>
 					</div>
