адаптив двох .popup і .burger-list

--- a/src/index.html
+++ b/src/index.html
@@ -698,7 +698,7 @@
 					<input type="text" name="phone" placeholder="Ваш телефон" class="popup-consultation__input popup__input">
 				</div>
 				<div class="popup-consultation__button popup__button">
-					<button class="button-order">Відправити дизайнеру</button>
+					<button class="button-order">Замовити</button>
 				</div>
 				<img src="images/svg/x.png" alt="svg" class="svg-big close popup__close">
 			</div>
